--- a/assets/views/forms.pug
+++ b/assets/views/forms.pug
@@ -15,207 +15,17 @@ block content
         +card('Agregar papeleta', '', '')
             form
                 .row
-                    .col-sm-3.form-group.input-field
-                        label(for="") Nº Papeleta
-                        input.form-control(type="text" disabled="")
-                    .col-sm-3.form-group
-                        label(for="exampleFormControlSelect1") Categoría
-                        select#exampleFormControlSelect1.custom-select
-                            option Categoría 1
-                            option Categoría 2
-                            option Categoría 3
-                            option Categoría 4
-                            option Categoría 5
-                    .col-sm-3.form-group
-                        label(for="cbTipo") Tipo
-                        select#cbTipo.custom-select
-                            option Tipo 1
-                            option Tipo 2
-                            option Tipo 3
-                            option Tipo 4
-                            option Tipo 5
-                    .col-sm-3.form-group
-                        label(for="cbTipo") Detalle
-                        select#cbTipo.custom-select
-                            option Detalle 1
-                            option Detalle 2
-                            option Detalle 3
-                            option Detalle 4
-                            option Detalle 5
-                .row
-                    .col-sm-6
-                        fieldset
-                            legend Desde
-                            .row
-                                .col-sm-4.form-group.input-field
-                                    label(for="") Fecha de Inicio
-                                    input#desde.form-control(type="date")
-                                .col-sm-4.form-group
-                                    label(for="") Hora
-                                    select#horasDesde.custom-select
-                                        option(value="9") 08
-                                        option(value="10") 09
-                                        option(value="11") 10
-                                        option(value="12") 11
-                                        option(value="13") 12
-                                        option(value="14") 13
-                                        option(value="15") 14
-                                        option(value="16") 15
-                                        option(value="17") 16
-                                        option(value="18") 17
-                                .col-sm-4.form-group
-                                    label(for="") Min
-                                    select#minutosDesde.custom-select
-                                        option(value="00") 00
-                                        option(value="01") 01
-                                        option(value="02") 02
-                                        option(value="03") 03
-                                        option(value="04") 04
-                                        option(value="05") 05
-                                        option(value="06") 06
-                                        option(value="07") 07
-                                        option(value="08") 08
-                                        option(value="09") 09
-                                        option(value="10") 10
-                                        option(value="11") 11
-                                        option(value="12") 12
-                                        option(value="13") 13
-                                        option(value="14") 14
-                                        option(value="15") 15
-                                        option(value="16") 16
-                                        option(value="17") 17
-                                        option(value="18") 18
-                                        option(value="19") 19
-                                        option(value="20") 20
-                                        option(value="21") 21
-                                        option(value="22") 22
-                                        option(value="23") 23
-                                        option(value="24") 24
-                                        option(value="25") 25
-                                        option(value="26") 26
-                                        option(value="27") 27
-                                        option(value="28") 28
-                                        option(value="29") 29
-                                        option(value="30") 30
-                                        option(value="31") 31
-                                        option(value="32") 32
-                                        option(value="33") 33
-                                        option(value="34") 34
-                                        option(value="35") 35
-                                        option(value="36") 36
-                                        option(value="37") 37
-                                        option(value="38") 38
-                                        option(value="39") 39
-                                        option(value="40") 40
-                                        option(value="41") 41
-                                        option(value="42") 42
-                                        option(value="43") 43
-                                        option(value="44") 44
-                                        option(value="45") 45
-                                        option(value="46") 46
-                                        option(value="47") 47
-                                        option(value="48") 48
-                                        option(value="49") 49
-                                        option(value="50") 50
-                                        option(value="51") 51
-                                        option(value="52") 52
-                                        option(value="53") 53
-                                        option(value="54") 54
-                                        option(value="55") 55
-                                        option(value="56") 56
-                                        option(value="57") 57
-                                        option(value="58") 58
-                                        option(value="59") 59
-                    .col-sm-6
-                        fieldset
-                            legend Hasta
-                            .row
-                                .col-sm-4.form-group.input-field
-                                    label(for="") Fecha de Fin
-                                    input#desde.form-control(type="date")
-                                .col-sm-4.form-group
-                                    label(for="") Hora
-                                    select#horasDesde.custom-select
-                                        option(value="9") 08
-                                        option(value="10") 09
-                                        option(value="11") 10
-                                        option(value="12") 11
-                                        option(value="13") 12
-                                        option(value="14") 13
-                                        option(value="15") 14
-                                        option(value="16") 15
-                                        option(value="17") 16
-                                        option(value="18") 17
-                                .col-sm-4.form-group
-                                    label(for="") Min
-                                    select#minutosDesde.custom-select
-                                        option(value="00") 00
-                                        option(value="01") 01
-                                        option(value="02") 02
-                                        option(value="03") 03
-                                        option(value="04") 04
-                                        option(value="05") 05
-                                        option(value="06") 06
-                                        option(value="07") 07
-                                        option(value="08") 08
-                                        option(value="09") 09
-                                        option(value="10") 10
-                                        option(value="11") 11
-                                        option(value="12") 12
-                                        option(value="13") 13
-                                        option(value="14") 14
-                                        option(value="15") 15
-                                        option(value="16") 16
-                                        option(value="17") 17
-                                        option(value="18") 18
-                                        option(value="19") 19
-                                        option(value="20") 20
-                                        option(value="21") 21
-                                        option(value="22") 22
-                                        option(value="23") 23
-                                        option(value="24") 24
-                                        option(value="25") 25
-                                        option(value="26") 26
-                                        option(value="27") 27
-                                        option(value="28") 28
-                                        option(value="29") 29
-                                        option(value="30") 30
-                                        option(value="31") 31
-                                        option(value="32") 32
-                                        option(value="33") 33
-                                        option(value="34") 34
-                                        option(value="35") 35
-                                        option(value="36") 36
-                                        option(value="37") 37
-                                        option(value="38") 38
-                                        option(value="39") 39
-                                        option(value="40") 40
-                                        option(value="41") 41
-                                        option(value="42") 42
-                                        option(value="43") 43
-                                        option(value="44") 44
-                                        option(value="45") 45
-                                        option(value="46") 46
-                                        option(value="47") 47
-                                        option(value="48") 48
-                                        option(value="49") 49
-                                        option(value="50") 50
-                                        option(value="51") 51
-                                        option(value="52") 52
-                                        option(value="53") 53
-                                        option(value="54") 54
-                                        option(value="55") 55
-                                        option(value="56") 56
-                                        option(value="57") 57
-                                        option(value="58") 58
-                                        option(value="59") 59
-                .row
                     .col-sm-12.form-group
-                        label(for="") Motivo
-                        textarea#motivo.form-control(rows="2")
-                .row
+                        label(for="lg") Large
+                        input#lg.form-control.form-control-lg(placeholder=".form-control-lg")
+                    
                     .col-sm-12.form-group
-                        label(for="") Justificación
-                        input#archivos.form-control-file(type="file" multiple="")
-                button.btn.btn-primary(type="submit") Agregar papeleta
+                        label(for="default") Default
+                        input#default.form-control(placeholder="Default input size")
+
+                    .col-sm-12.form-group
+                        label(for="sm") Small
+                        input#sm.form-control.form-control-sm(placeholder=".form-control-sm")
+
+                button.btn.btn-primary(type="submit") Enviar
                 button.btn.btn-light(type="submit") Cancelar
