--- a/assets/views/simplebar.pug
+++ b/assets/views/simplebar.pug
@@ -1,6 +1,6 @@
 extends includes/base
 block globals
-    - var title= 'Toastr'
+    - var title= 'SimpleBar'
     - var body_id= 'page'
 
 block mainmenu
