--- a/assets/styles/layouts/_nav.scss
+++ b/assets/styles/layouts/_nav.scss
@@ -9,7 +9,7 @@ body {
         left: 0;
         right: 0;
         height: 5rem;
-        z-index: 1100;
+        z-index: $zindex-fixed;
         background-color: $primary;
         padding: 0;        
         
@@ -120,7 +120,7 @@ body {
         top: 5rem;
         bottom: 0;
         left: 0;
-        z-index: 1100;
+        z-index: $zindex-fixed;
         width: 22.6rem;
         transition: all 0.3s ease;
         height: calc(100vh - 5rem);
