--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,6 +12,7 @@
 @import "components/toastr/_toastr";
 @import "components/simplebar/_simplebar";
 @import "components/flatpickr/_flatpickr";
+@import "components/floating-labels";
 @import "layouts/_nav";
 @import "layouts/_aside";
 @import "components/_login";
