--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -272,7 +272,7 @@ $link-hover-decoration: none;
 //
 // Modals
 //
-$modal-backdrop-bg:                 $white;
+// $modal-backdrop-bg:                 $white;
 $modal-backdrop-opacity:            0.75;
 
 //
