--- a/assets/styles/layouts/_nav.scss
+++ b/assets/styles/layouts/_nav.scss
@@ -139,7 +139,7 @@ body {
         bottom: 0;
         left: 0;
         z-index: $zindex-fixed;
-        width: 22.6rem;
+        width: 22.5rem;
         transition: all 0.3s ease;
         height: calc(100vh - 5rem);
 
@@ -236,7 +236,7 @@ body {
         }
 
         #sidebar {
-            width: 22.6rem;
+            width: 22.5rem;
             margin-left: 0;
 
                 .user-profile {
@@ -381,7 +381,7 @@ body {
                         display: inline-block;
                     }
 
-                    width: 22.6rem;
+                    width: 22.5rem;
                     margin-left: 0;
 
                     .user-profile {
@@ -475,6 +475,26 @@ body {
                             }
                         }
                     }
+                }
+            }
+        }
+    }
+}
+
+nav{
+    &.nav-actions{
+        @extend .nav;
+        a{
+            @extend .nav-link;
+            padding: 0 .75rem;
+            color: $black-100 !important;
+            &:hover{
+                color: $black-200 !important;
+            }
+            &.danger{
+                color: $danger !important;
+                &:hover{
+                    color: darken($danger, 15%) !important;
                 }
             }
         }
