Mejorado el tema de los imputs sm

--- a/assets/views/tables-2.pug
+++ b/assets/views/tables-2.pug
@@ -124,6 +124,11 @@ block content
                     |
                     = '$("table").DataTable();'
 
+    .col-sm-12
+        +card('FontAwesome', 'Usando Ajax', 'https://fontawesome.com/icons')
+            p Puede ver un ejemplo de uso de ícono a través de Ajax aquí.
+            .chart__table
+
 block append scripts
     script.
       let $ = require('jquery');
@@ -156,6 +161,47 @@ block append scripts
                 }
             },
             responsive: true
+        });
+
+        $(".chart__table").html(`
+          <table id="starwars" class="dt-responsive" cellspacing="0" width="100%">
+            <thead class="thead-dark">
+              <tr>
+                <th>Planeta</th>
+                <th>Diametro</th>
+                <th>Población</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        `);
+        
+        var t = $('#starwars').DataTable(
+           {
+            dom: 'Bfrtip',
+            buttons: [
+                'copy', 'csv', 'excel', 'pdf', 'print'
+            ],
+          } 
+        );
+        
+        $.ajax({
+          url: "https://swapi.co/api/planets/",
+          dataType: "json",
+          success: function( data ) {
+            let arr = data.results;
+        
+            for(var i = 0; i < arr.length; i++ ){
+              t.row.add( [
+                arr[i].name,
+                arr[i].diameter,
+                arr[i].population,
+                '<nav class="nav-actions"><a href="#"><i class="fas fa-user-check"></i></a></nav>'
+              ] ).draw( false );
+            }
+          }
         });
       });
 
