--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -287,6 +287,14 @@ $input-btn-padding-y: .75rem;
 $input-btn-padding-x: 1.10rem;
 $input-btn-padding-y-lg: 1rem;
 $input-btn-padding-x-lg: 1.20rem;
+$label-margin-bottom: 0.2rem;
+
+$input-btn-padding-y-sm: 0.25rem;
+$input-btn-padding-x-sm: 0.5rem;
+
+form label {
+    font-size: 1.2rem;
+}
 
 $font-size-base:              1.4rem;
 
